# homorepeat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  GOAL.md  README.md  compose.yaml  main.nf  manage.py  pyproject.toml
.claude/: settings.local.json
apps/: __init__.py
config/: __init__.py  settings.py  urls.py  wsgi.py
containers/: README.md  web.Dockerfile
docs/: PolyGlutamine in Deuterostomes.html  README.md  architecture.md  configuration.md  contracts.md  development.md  figures.md  live-detection-smoke.md  live-smoke.md  operations.md  polyq_paarta_portfolio_entry_blocks.md  production_architecture.md  roadmap.md  stat-view-development.md  statistics.md  usage.md  validation.md
lib/: phase5_validation.py  report_render.py
scripts/: build_dev_containers.sh  run_phase4_pipeline.sh  smoke_live_acquisition.sh  smoke_live_detection.sh
templates/: base.html
tests/: test_phase5_validation.py  test_phase6_report_render.py  test_slice5_blast_detection.py  test_slice7_sqlite_build.py  test_slice8_summaries.py
web_tests/: __init__.py  _browser_views.py  _import_command.py  _merged_helpers.py  support.py  test_browser_accessions.py  test_browser_codon_composition_lengths.py  test_browser_codon_ratios.py  test_browser_codon_usage_rows.py  test_browser_codon_usage_table.py  test_browser_downloads.py  test_browser_exports.py  test_browser_home_runs.py  test_browser_homorepeats.py  test_browser_lengths.py  test_browser_merge_views.py  test_browser_merged.py  test_browser_metadata.py  test_browser_operations.py  test_browser_presentation.py  test_deletion.py  (+19 more)
(+328 files in other folders)
