[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homorepeat-web"
version = "0.1.0"
description = "HomoRepeat Django browser and import app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=5,<6",
  "psycopg[binary]>=3.1,<4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*", "web_tests*"]
