[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homorepeat-web"
version = "0.1.0"
description = "HomoRepeat Django browser and import app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=5,<6",
  "psycopg[binary]>=3.1,<4",
  "celery[redis]>=5.3,<6",
  "flower>=2,<3",
  "django-redis>=5.4",
  "gunicorn>=21",
  "httpx>=0.27",
  "whitenoise>=6.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*", "web_tests*"]
